{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 105,
  "lineage": "a08f5eee-d6b7-563e-09c7-f43d07e93092",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:948310859421:network-acl/acl-0f4c4c291ac43720a",
            "default_network_acl_id": "acl-0f4c4c291ac43720a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f4c4c291ac43720a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "948310859421",
            "subnet_ids": [
              "subnet-052c70a98c9480da4",
              "subnet-0d0cc86118eea891b"
            ],
            "tags": {
              "Name": "user-management-cluster-vpc-default",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "tags_all": {
              "Name": "user-management-cluster-vpc-default",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "vpc_id": "vpc-0b118a99523535e74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:948310859421:route-table/rtb-03ff8663e93da85ce",
            "default_route_table_id": "rtb-03ff8663e93da85ce",
            "id": "rtb-03ff8663e93da85ce",
            "owner_id": "948310859421",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "user-management-cluster-vpc-default",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "tags_all": {
              "Name": "user-management-cluster-vpc-default",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b118a99523535e74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:948310859421:security-group/sg-0fc7a0dfe7abaf9ad",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0fc7a0dfe7abaf9ad",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "948310859421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "user-management-cluster-vpc-default",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "tags_all": {
              "Name": "user-management-cluster-vpc-default",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "vpc_id": "vpc-0b118a99523535e74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09621456872ce77f3",
            "arn": "arn:aws:ec2:ap-northeast-2:948310859421:elastic-ip/eipalloc-09621456872ce77f3",
            "domain": "vpc",
            "id": "eipalloc-09621456872ce77f3",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-38-83-246.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.83.246",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "user-management-cluster-vpc-ap-northeast-2a",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "tags_all": {
              "Name": "user-management-cluster-vpc-ap-northeast-2a",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:948310859421:internet-gateway/igw-003827dcbfd74a146",
            "id": "igw-003827dcbfd74a146",
            "owner_id": "948310859421",
            "tags": {
              "Name": "user-management-cluster-vpc",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "tags_all": {
              "Name": "user-management-cluster-vpc",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "vpc_id": "vpc-0b118a99523535e74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09621456872ce77f3",
            "association_id": "eipassoc-09fceea527bef1aee",
            "connectivity_type": "public",
            "id": "nat-0a493568b9c432f21",
            "network_interface_id": "eni-0571bf3fa80efaf28",
            "private_ip": "10.0.101.216",
            "public_ip": "3.38.83.246",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a9037bfb6aeb466f",
            "tags": {
              "Name": "user-management-cluster-vpc-ap-northeast-2a",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "tags_all": {
              "Name": "user-management-cluster-vpc-ap-northeast-2a",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03b9c0925d1ad972c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a493568b9c432f21",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03b9c0925d1ad972c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-003827dcbfd74a146",
            "id": "r-rtb-0bca3bec1de7b1a631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bca3bec1de7b1a63",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:948310859421:route-table/rtb-03b9c0925d1ad972c",
            "id": "rtb-03b9c0925d1ad972c",
            "owner_id": "948310859421",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "user-management-cluster-vpc-private",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "tags_all": {
              "Name": "user-management-cluster-vpc-private",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b118a99523535e74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:948310859421:route-table/rtb-0bca3bec1de7b1a63",
            "id": "rtb-0bca3bec1de7b1a63",
            "owner_id": "948310859421",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "user-management-cluster-vpc-public",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "tags_all": {
              "Name": "user-management-cluster-vpc-public",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b118a99523535e74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e11826db0ee706ab",
            "route_table_id": "rtb-03b9c0925d1ad972c",
            "subnet_id": "subnet-052c70a98c9480da4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057d73476e03f86e5",
            "route_table_id": "rtb-03b9c0925d1ad972c",
            "subnet_id": "subnet-0b513448f9b47a09d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06712e87a92e814ce",
            "route_table_id": "rtb-03b9c0925d1ad972c",
            "subnet_id": "subnet-0aba59078e483e9d0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ca4e891dd75a176",
            "route_table_id": "rtb-0bca3bec1de7b1a63",
            "subnet_id": "subnet-0a9037bfb6aeb466f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe82af54aa88ebb6",
            "route_table_id": "rtb-0bca3bec1de7b1a63",
            "subnet_id": "subnet-045b0e28f12a7ccac"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0320f4e7b03bfc583",
            "route_table_id": "rtb-0bca3bec1de7b1a63",
            "subnet_id": "subnet-0d0cc86118eea891b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:948310859421:subnet/subnet-052c70a98c9480da4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052c70a98c9480da4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948310859421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user-management-cluster-vpc-private-ap-northeast-2a",
              "kubernetes.io/cluster/user-management-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "user-management-cluster-vpc-private-ap-northeast-2a",
              "kubernetes.io/cluster/user-management-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b118a99523535e74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:948310859421:subnet/subnet-0b513448f9b47a09d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b513448f9b47a09d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948310859421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user-management-cluster-vpc-private-ap-northeast-2b",
              "kubernetes.io/cluster/user-management-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "user-management-cluster-vpc-private-ap-northeast-2b",
              "kubernetes.io/cluster/user-management-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b118a99523535e74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:948310859421:subnet/subnet-0aba59078e483e9d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aba59078e483e9d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948310859421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user-management-cluster-vpc-private-ap-northeast-2c",
              "kubernetes.io/cluster/user-management-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "user-management-cluster-vpc-private-ap-northeast-2c",
              "kubernetes.io/cluster/user-management-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b118a99523535e74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:948310859421:subnet/subnet-0a9037bfb6aeb466f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9037bfb6aeb466f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948310859421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user-management-cluster-vpc-public-ap-northeast-2a",
              "kubernetes.io/cluster/user-management-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "user-management-cluster-vpc-public-ap-northeast-2a",
              "kubernetes.io/cluster/user-management-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b118a99523535e74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:948310859421:subnet/subnet-045b0e28f12a7ccac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045b0e28f12a7ccac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948310859421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user-management-cluster-vpc-public-ap-northeast-2b",
              "kubernetes.io/cluster/user-management-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "user-management-cluster-vpc-public-ap-northeast-2b",
              "kubernetes.io/cluster/user-management-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b118a99523535e74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:948310859421:subnet/subnet-0d0cc86118eea891b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0cc86118eea891b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948310859421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "user-management-cluster-vpc-public-ap-northeast-2c",
              "kubernetes.io/cluster/user-management-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "user-management-cluster-vpc-public-ap-northeast-2c",
              "kubernetes.io/cluster/user-management-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b118a99523535e74"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:948310859421:vpc/vpc-0b118a99523535e74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f4c4c291ac43720a",
            "default_route_table_id": "rtb-03ff8663e93da85ce",
            "default_security_group_id": "sg-0fc7a0dfe7abaf9ad",
            "dhcp_options_id": "dopt-008f145b31a9a5f4e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b118a99523535e74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03ff8663e93da85ce",
            "owner_id": "948310859421",
            "tags": {
              "Name": "user-management-cluster-vpc",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            },
            "tags_all": {
              "Name": "user-management-cluster-vpc",
              "kubernetes.io/cluster/user-management-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}